WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25187
<video> may not be rendered upon certain racy conditions.
https://bugs.webkit.org/show_bug.cgi?id=25187
Summary
<video> may not be rendered upon certain racy conditions.
Pierre d'Herbemont
Reported
2009-04-14 11:04:21 PDT
* SUMMARY 10A318: Sometimes there is no video drawn, whereas controls are. * STEPS TO REPRODUCE 1. Open a HTML file that have a <video> with content. 2. Reload the page multiple times until no content is shown. * RESULTS Sometimes, there is no video frames drawn. * NOTES Apparently the QTRenderer is not created.
Attachments
patch v1.
(1.96 KB, patch)
2009-04-14 11:07 PDT
,
Pierre d'Herbemont
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pierre d'Herbemont
Comment 1
2009-04-14 11:07:21 PDT
Created
attachment 29475
[details]
patch v1.
Eric Carlson
Comment 2
2009-04-14 11:13:31 PDT
rdar://6787266
Simon Fraser (smfr)
Comment 3
2009-04-16 10:11:49 PDT
Comment on
attachment 29475
[details]
patch v1. Is it possible to make a LayoutTest for this?
Eric Carlson
Comment 4
2009-04-16 11:02:37 PDT
http://trac.webkit.org/changeset/42581
Pierre d'Herbemont
Comment 5
2009-04-16 11:07:58 PDT
Moving to fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug